# task-time

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  hooks.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: event.rs  main.rs  utils.rs  watcher.rs
src/components/: Header.tsx  HistoryTask.tsx  TimeShower.tsx  ToolBar.tsx
